--- a/css/styles.css
+++ b/css/styles.css
@@ -1471,7 +1471,7 @@ a:hover.back-to-top {
 .ex-header {
 	padding-top: 8.5rem;
 	padding-bottom: 4rem;
-	background-image: linear-gradient(rgba(255, 255, 255, 0.7),rgba(4, 9, 30, 0.7)), url('../pictures/glam2.jpg');
+	background-image: linear-gradient(rgba(255, 255, 255, 0.7),rgba(4, 9, 30, 0.7)), url('../images/glam2.jpg');
 }
 
 .ex-header h1 {
